# CaMel---Agent

./: .gitignore  README.md  pyproject.toml
core/: capabilities.py  orchestrator.py  policy_engine.py
eval/: run_suite.py
policies/: email_policy.py  registry.py
runs/: demo_attack.py  demo_benign.py
schemas/: read_cloud_doc.json  send_email.json
tools/: read_cloud_doc.py  send_email.py
utils/: safety_gate.py
